--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,59 +1,80 @@
+
+/* VARIABLES */
+:root {
+  --major-bg-color: #152c4a;
+  --minor-bg-color: #ebeded;
+  --amazon-major-color: #73c18c;
+}
+
+/* BODY */
+body {
+  background-color: var(--minor-bg-color);
+}
+
+/* HEADER */
 .header {
-  height: 70px;
-  background-color: #7fade8;
-  display: grid;
-  grid-template-columns: 2fr 5fr 2fr;
-  /* 
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 100; */
-}
-
-.header__logo {
-  width: 200px;
-  height: 60px;
-  display: flex;
-  flex-direction: row;
-  object-fit: contain;
-  margin: 0 20px;
-  margin-top: 10px;
-}
-
-.header__logo > img {
-  max-width: 80%;
-  max-height: 80%;
-  margin-right: 10px;
-}
-
-.header__searchbox > input {
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  box-sizing: border-box;
-}
-.header__searchbox > button {
-height: 60%;
-width: 100px;
-border-radius: 7px;
-}
-
-.header__searchbox {
+  height: 50px;
+  background-color: var(--major-bg-color);
   display: flex;
+  justify-content: center;
+}
+.header .header-nav {
+  margin-top: 2px;
+  display: flex;
+  justify-content: center;
+}
+.header .header-nav .header-container {
+  width: 1200px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  border-radius: 24px;
 }
-
-.header_searchIcon {
-  padding: 5px;
-  height: 22px !important;
-  background-color: #cd9042;
+.header .header-nav .header-container .amazon-logo {
+  width: 60px;
+  height: 50px;
+  padding-bottom: 2px;
 }
-
-.logins {
-  padding-left: 10rem;
+.header .header-nav .header-container .header-search {
+  width: 50%;
   display: flex;
-  justify-content:flex-start;
-  color: antiquewhite;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.header .header-nav .header-container .header-search .search-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #ccc;
+  /* border-radius: 5px; */
+  padding: 0 10px;
+}
+.header .header-nav .header-container .header-search .search-button {
+  width: 40px;
+  height: 40px;
+  /* border-radius: 5px; */
+  background-color: var(--amazon-major-color);
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  color: #232323;
+}
+.header .header-nav .header-container .header-cart {
+  color: #efefef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .header-nav .header-container .header-cart svg {
+  width: 40px;
+  height: 40px;
+}
+.header .header-nav .header-container  .header-logins {
+  color: #efefef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
